# WhatsNew

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: whatsnew.yml
tests/: conftest.py  test_cli.py  test_dates.py  test_diffs.py  test_golden.py  test_reduce.py
tests/golden/: summary.json
whatsnew/: __init__.py  cli.py  config.py
whatsnew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
whatsnew/cache/: __init__.py  store.py
whatsnew/git/: __init__.py  diffs.py  gh_api.py  repo.py
whatsnew/ingest/: __init__.py  collect.py
whatsnew/outputs/: __init__.py  json_out.py  md_out.py  terminal.py
whatsnew/publish/: __init__.py  gh_pages.py  preview.py
whatsnew/summarize/: __init__.py  map_step.py  prompts.py  provider.py  reduce_step.py
whatsnew/utils/: __init__.py  dates.py  io.py  logging.py  run.py
